--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>My Resume</title>
         <body>
             <h1>Online Resume</h1> 
-            <img src = "../../../../photo_2022-12-17_10-35-56.jpg" height = "200"/>
+            <img src = "photo_2022-12-17_10-35-56.jpg" height = "200"/>
             <h2>Summary</h2>
             <p>To secure a challenging position at Companies, where I can leverage my 
                 technical expertise, innovative mindset, and passion for problem-solving to
